[package]
name = "getman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
curl = "0.4.46"
